<?xml version="1.0" encoding="utf-8"?>

<layout  xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data
        >
        <variable
            name="userDataViewModel"
            type="com.project.farmingapp.viewmodel.UserDataViewModel" />
    </data>
<androidx.drawerlayout.widget.DrawerLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/drawerLayout"
    tools:openDrawer="start"
    >

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <!--toolbar and header  -->
        <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/appbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:theme="@style/AppTheme.AppBarOverlay"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            >

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
                app:theme="@style/Toolbar.Light"
                app:titleTextAppearance="@style/TextAppearance.AppCompat.Title" >

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <ImageView
                        android:id="@+id/customNavigationIcon"
                        android:layout_width="48dp"
                        android:layout_height="48dp"
                        android:padding="8dp"
                        android:src="@drawable/ic_baseline_clear_all_24"
                        android:clickable="true"
                        android:focusable="true"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        android:text="@string/navigationicon"
                        android:contentDescription="@string/navigationicon"
                        />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintBottom_toBottomOf="parent"
                        android:text="@string/app_name"
                        android:textSize="20sp"
                        android:textStyle="bold"
                        android:textColor="@color/white"
                        />

                </androidx.constraintlayout.widget.ConstraintLayout>

            </androidx.appcompat.widget.Toolbar>

        </com.google.android.material.appbar.AppBarLayout>

        <FrameLayout
            android:id="@+id/frame_layout"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintBottom_toTopOf="@id/bottomNav"
            app:layout_constraintTop_toBottomOf="@+id/appbar" />


        <com.ismaeldivita.chipnavigation.ChipNavigationBar
            android:id="@+id/bottomNav"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:background="@color/white"
            android:elevation="20dp"
            android:padding="8dp"
            app:cnb_addBottomInset="true"
            app:cnb_addLeftInset="true"
            app:cnb_addRightInset="true"
            app:cnb_menuResource="@menu/dash_menu"
            app:cnb_orientationMode="horizontal"
            app:layout_constraintBottom_toBottomOf="parent"
            />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <!--navigation drawer menu-->
    <com.google.android.material.navigation.NavigationView
        android:id="@+id/navView"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:fitsSystemWindows="false">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:minHeight="200dp"
                android:orientation="vertical">

                <de.hdodenhof.circleimageview.CircleImageView
                    android:id="@+id/navbarUserImage"
                    android:layout_width="70dp"
                    android:layout_height="70dp"
                    android:layout_margin="@dimen/spacing_xsmall"
                    android:src="@drawable/photo_male_1"
                     />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/spacing_medium"
                    android:gravity="center"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/navbarUserName"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/evans_collins"
                        android:textAppearance="@style/TextAppearance.AppCompat.Body2"
                        android:textColor="@color/blue_grey_800"
                        app:fontFamily="sans-serif-medium" />

                    <TextView
                        android:id="@+id/navbarUserEmail"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/evan_collins_mail_com"
                        android:textAppearance="@style/TextAppearance.AppCompat.Caption"
                        android:textColor="@color/grey_20"
                        app:fontFamily="sans-serif-medium" />

                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/ecomnavlay"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_48dp"
                android:background="?attr/selectableItemBackground"
                android:clickable="true"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:paddingLeft="@dimen/spacing_mlarge"
                android:paddingRight="@dimen/spacing_mlarge"
                android:focusable="true">

                <ImageView
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    app:srcCompat="@drawable/img_wizard_3" />

                <View
                    android:layout_width="@dimen/spacing_mlarge"
                    android:layout_height="0dp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/e_commerce"
                    android:textAppearance="@style/TextAppearance.AppCompat.Body2"
                    android:textColor="@color/grey_80"
                    app:fontFamily="sans-serif-medium" />

            </LinearLayout>

            <View
                android:layout_width="0dp"
                android:layout_height="@dimen/spacing_middle" />

            <LinearLayout
                android:id="@+id/expensenavlay"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_48dp"
                android:background="?attr/selectableItemBackground"
                android:clickable="true"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:paddingLeft="@dimen/spacing_mlarge"
                android:paddingRight="@dimen/spacing_mlarge"
                android:focusable="true">

                <ImageView
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    app:srcCompat="@drawable/expensecalculator" />

                <View
                    android:layout_width="@dimen/spacing_mlarge"
                    android:layout_height="0dp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/expense_calculator"
                    android:textAppearance="@style/TextAppearance.AppCompat.Body2"
                    android:textColor="@color/grey_80"
                    app:fontFamily="sans-serif-medium" />

            </LinearLayout>

            <View
                android:layout_width="0dp"
                android:layout_height="@dimen/spacing_middle" />

            <LinearLayout
                android:id="@+id/expertnavlay"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_48dp"
                android:background="?attr/selectableItemBackground"
                android:clickable="true"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:paddingLeft="@dimen/spacing_mlarge"
                android:paddingRight="@dimen/spacing_mlarge"
                android:focusable="true">

                <ImageView
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    app:srcCompat="@drawable/img_wizard_5" />

                <View
                    android:layout_width="@dimen/spacing_mlarge"
                    android:layout_height="0dp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/expert_kisaan"
                    android:textAppearance="@style/TextAppearance.AppCompat.Body2"
                    android:textColor="@color/grey_80"
                    app:fontFamily="sans-serif-medium" />

            </LinearLayout>

            <View
                android:layout_width="0dp"
                android:layout_height="@dimen/spacing_middle" />

            <LinearLayout
                android:id="@+id/termsnavlay"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_48dp"
                android:background="?attr/selectableItemBackground"
                android:clickable="true"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:paddingLeft="@dimen/spacing_mlarge"
                android:paddingRight="@dimen/spacing_mlarge"
                android:focusable="true">

                <ImageView
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    app:srcCompat="@drawable/img_wizard_2" />

                <View
                    android:layout_width="@dimen/spacing_mlarge"
                    android:layout_height="0dp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/terms_conditions"
                    android:textAppearance="@style/TextAppearance.AppCompat.Body2"
                    android:textColor="@color/grey_80"
                    app:fontFamily="sans-serif-medium" />

            </LinearLayout>

            <View
                android:layout_width="0dp"
                android:layout_height="@dimen/spacing_middle" />

            <LinearLayout
                android:id="@+id/logoutnavlay"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_48dp"
                android:background="?attr/selectableItemBackground"
                android:clickable="true"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:paddingLeft="@dimen/spacing_mlarge"
                android:paddingRight="@dimen/spacing_mlarge"
                android:focusable="true">

                <ImageView
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    app:srcCompat="@drawable/ic_power_settings" />

                <View
                    android:layout_width="@dimen/spacing_mlarge"
                    android:layout_height="0dp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/logout"
                    android:textAppearance="@style/TextAppearance.AppCompat.Body2"
                    android:textColor="@color/grey_80"
                    app:fontFamily="sans-serif-medium" />

            </LinearLayout>

        </LinearLayout>

    </com.google.android.material.navigation.NavigationView>

</androidx.drawerlayout.widget.DrawerLayout>
</layout>