<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    >

<RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.chatapp.view.ui.MessageActivity"
    android:background="@color/white">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/grey_40"
        android:theme="@style/Theme.AppCompat.DayNight.DarkActionBar">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/iv_back_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_centerVertical="true"
                android:foreground="?selectableItemBackground"
                android:padding="16dp"
                android:src="@drawable/ic_arrow_back_black_24dp" />

            <RelativeLayout
                android:id="@+id/relativeLayout_message"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toEndOf="@+id/iv_back_button">

                <RelativeLayout
                    android:id="@+id/relativeLayout_second"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                    <de.hdodenhof.circleimageview.CircleImageView
                        android:id="@+id/iv_user_image"
                        android:layout_width="60dp"
                        android:layout_height="60dp"
                        android:layout_centerVertical="true"
                        android:layout_marginStart="7dp"
                        android:clickable="true"
                        android:focusable="true"
                        android:padding="5dp"
                        android:contentDescription="@string/profile_image"
                        android:src="@color/white"
                        android:textSize="18sp" />
                </RelativeLayout>

                <ImageView
                    android:id="@+id/iv_user_status_message_view"
                    android:layout_width="13dp"
                    android:layout_height="13dp"
                    android:layout_alignEnd="@+id/relativeLayout_second"
                    android:layout_alignBottom="@+id/relativeLayout_second"
                    android:layout_marginBottom="5dp"
                    android:background="@drawable/offline_status">

                </ImageView>


            </RelativeLayout>


            <TextView
                android:id="@+id/tv_profile_user_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginStart="7dp"
                android:layout_toEndOf="@+id/relativeLayout_message"
                android:padding="2dp"
                android:text="@string/username"
                android:textColor="@color/white"
                android:textStyle="bold" />
        </RelativeLayout>

    </androidx.appcompat.widget.Toolbar>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recycler_view_messages_record"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@id/send_relative_layout"
        android:layout_below="@id/toolbar">

    </androidx.recyclerview.widget.RecyclerView>

    <RelativeLayout
        android:id="@+id/send_relative_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="2dp"
        android:layout_marginTop="2dp"
        android:layout_marginEnd="2dp"
        android:layout_marginBottom="2dp"
        android:background="@drawable/send_message_et_background"
        android:padding="5dp">


        <EditText
            android:id="@+id/et_chat"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_centerInParent="true"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="4dp"
            android:layout_toStartOf="@+id/iv_send_button"
            android:background="@drawable/send_message_et_background"
            android:cursorVisible="true"
            android:focusable="true"
            android:hint="@string/type_your_messages_here"
            android:padding="10dp"
            android:textColor="@color/background"
            android:textColorHint="@color/grey_5"
            android:textCursorDrawable="@color/background"
            android:textSize="18sp" />

        <ImageView
            android:id="@+id/iv_send_button"
            android:layout_width="40dp"
            android:layout_height="45dp"
            android:layout_alignParentEnd="true"
            android:layout_centerInParent="true"
            android:layout_marginStart="2dp"
            android:padding="4dp"
            android:src="@drawable/ic_send_black_24dp" />


    </RelativeLayout>

</RelativeLayout>
</layout>